--- a/MyTradeMTG/Views/User/SaleRequest.cshtml
+++ b/MyTradeMTG/Views/User/SaleRequest.cshtml
@@ -232,7 +232,7 @@
                                         <div class="modal-footer">
                                             @*<button class="btn btn-danger btn-sm" data-dismiss="modal"><i class="flaticon-cancel-12"></i>Cancel</button>*@
                                             @*<button type="submit" class="btn btn-primary btn-sm" onclick="return SaveSaleRequest();">Save</button>*@
-                                            <button type="submit" class="btn btn-primary btn-sm" onclick="return ApproveSaleRequest();" id="btnapprove" value="Inprocess">Approve</button>
+                                            <button type="submit" class="btn btn-primary btn-sm" onclick="return ApproveSaleRequest();" id="btnapprove" value="InProcess">Approve</button>
                                             <button type="submit" id="btnReject" name="btnReject" class="btn btn-danger btn-sm" onclick="return RejectSaleRequest();" value="Reject">Reject</button>
 
                                         </div>
