--- a/MyTradeMTG/Views/AdminReports/TopupReport.cshtml
+++ b/MyTradeMTG/Views/AdminReports/TopupReport.cshtml
@@ -79,14 +79,16 @@
                                 <thead>
                                     <tr>
                                         <th>Sr No.</th>
-                                        <th>Login Id</th>
+                                        @*<th>Login Id</th>*@
                                         <th>Name</th>
                                         <th>Product Name</th>
                                         <th>Topup MTG Token/USDT</th>
-                                        <th>BV</th>
+                                        <th>Activation MTG Token</th>
+                                        @*<th>BV</th>*@
                                         <th>Transaction By</th>
                                         <th>Status</th>
                                         <th>TPS Percentage</th>
+                                        <th>Basis On</th>
                                         <th>Days</th>
                                         <th>Date</th>
                                         @*<th>Topup Via</th>*@
@@ -110,14 +112,16 @@
                                             {
                                                 <tr class="text-left">
                                                     <td>@i</td>
-                                                    <td>@Item.LoginId</td>
+                                                    @*<td>@Item.LoginId</td>*@
                                                     <td>@Item.DisplayName</td>
                                                     <td>@Item.Package</td>
                                                     <td>@Item.PinAmount</td>
-                                                    <td>@Item.BV</td>
+                                                    <td>@Item.ActivationMTGToken</td>
+                                                    @*<td>@Item.BV</td>*@
                                                     <td>@Item.TransactionBy</td>
                                                     <td>@Item.Status</td>
                                                     <td>@Item.ROIPercentage %</td>
+                                                    <td>@Item.BasisOn</td>
                                                     <td><a class="btn btn-info btn-sm" href="/Admin/ViewTPSForAdmin?Id=@Item.Pk_investmentId&UserId=@Item.Fk_UserId">@Item.PackageDays</a></td>
                                                     <td>@Item.TopUpDate</td>
                                                     @*<td>@Item.TopupVia</td>*@
@@ -143,7 +147,7 @@
                                     <tr>
                                         <th></th>
                                         <th></th>
-                                        <th></th>
+                                        @*<th></th>*@
                                         @*<th></th>
                                             <th></th>*@
 
