--- a/MyTradeMTG/Views/Master/PackageList.cshtml
+++ b/MyTradeMTG/Views/Master/PackageList.cshtml
@@ -31,7 +31,7 @@
                             <div class="col-md-3">
                                 <div class="form-group">
                                     <label class="col-form-label">Package Type<span style="color: red">*</span></label>
-                                    @Html.DropDownListFor(m => m.PackageTypeId, new SelectList(ViewBag.ddlPackageType, "Value", "Text"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.PackageTypeId, new SelectList(ViewBag.ddlPackageType, "Value", "Text"), new { @class = "form-control", @onchange = "return onPackageTypeChange();" })
                                 </div>
                             </div>
                             <div class="col-md-3">
@@ -62,12 +62,13 @@
                                         @*<th>BV</th>*@
                                         <th>Activation MTG Token</th>
                                         <th>Percentage</th>
+                                        <th>Basis On</th>
                                         <th>Days</th>
                                         <th>From Amount</th>
                                         <th>To Amount</th>
                                         <th>In Multiple Of</th>
-                                        @if (Model.PackageTypeId == "2")
-                                        {
+                                        @*@if (Model.PackageTypeId == "2")
+                                        {*@
                                             @*<th>Percentage</th>
                                                 <th>Days</th>
                                                 <th>From Amount</th>
@@ -83,19 +84,20 @@
 
 
 
-                                        }
-                                        @if (Model.PackageTypeId == "1")
-                                        {
+                                        @*}*@
+                                        @*@if (Model.PackageTypeId == "1")
+                                        {*@
                                             @*<th>Direct Count 1</th>
                                                 <th>Direct Count 2</th>
                                                 <th>Direct Count 3</th>
                                                 <th>Return Percent 1</th>
                                                 <th>Return Percent 2</th>
                                                 <th>Return Percent 3</th>*@
-                                        }
+                                        @*}*@
 
                                         <th>Status</th>
                                         <th>Sponsor Income</th>
+                                     
                                         @*<th>Is Combo Package</th>*@
                                         <th>Action</th>
                                     </tr>
@@ -116,12 +118,13 @@
                                                     @*<td>@Item.BV</td>*@
                                                     <td>@Item.ActivationMTGToken</td>
                                                     <td>@Item.ROIPercent</td>
+                                                    <td>@Item.BasisOn</td>
                                                     <td>@Item.Days</td>
                                                     <td>@Item.FromAmount</td>
                                                     <td>@Item.ToAmount</td>
                                                     <td>@Item.InMultipleOf</td>
-                                                    @if (Model.PackageTypeId == "2")
-                                                    {
+                                                    @*@if (Model.PackageTypeId == "2")
+                                                    {*@
                                                         @*<td>@Item.ROIPercent</td>
                                                             <td>@Item.Days</td>
                                                             <td>@Item.FromAmount</td>
@@ -135,9 +138,9 @@
                                                             <td>@Item.ReturnPercent3</td>
 
 
-                                                    }
-                                                    @if (Model.PackageTypeId == "1")
-                                                    {
+                                                    @*}*@
+                                                    @*@if (Model.PackageTypeId == "1")
+                                                    {*@
                                                         @*<td>@Item.DrAmount1</td>
                                                             <td>@Item.DrAmount2</td>
                                                             <td>@Item.DrAmount3</td>
@@ -145,10 +148,15 @@
                                                             <td>@Item.ReturnPercent2</td>
                                                             <td>@Item.ReturnPercent3</td>*@
 
-                                                    }
+                                                    @*}*@
                                                     <td>@Item.Status</td>
                                                     <td>@Item.SponsorIncome</td>
+                                                  
                                                     @*<td>@Item.IscomboPackage</td>*@
+
+                                                    
+
+
                                                     <td class="d-flex">
                                                         <a href="/Master/PackageMaster?PackageID=@Item.Packageid" class="btn btn-info btn-xxs m-1">Edit</a>
                                                         <a href="/Master/DeletePackage?id=@Item.Packageid" class="btn btn-danger btn-xxs m-1" onclick="return confirm('Are you sure you want to delete this Package?');" name="btnDelete">Delete</a>
@@ -173,3 +181,26 @@
     </div>
 }
 
+
+<script>
+
+
+    function onPackageTypeChange() {
+        debugger;
+        var PackageTypeId = $('#PackageTypeId').val();
+        $.ajax({
+            url: '/Master/GetPackageTypeList', type: 'post', dataType: 'json',
+            data: { 'PackageTypeId': PackageTypeId },
+            success: function (result) {
+                $("#Packageid").html(""); // clear before appending new list
+                $("#Packageid").empty();
+                $("#Packageid").append(
+                      $('<option></option>').val(0).html('--Select--'));
+                $.each(result.ddlPackage, function (index, item) {
+                    $("#Packageid").append(
+                          $('<option></option>').val(item.Value).html(item.Text));
+                });
+            }
+        });
+    }
+</script>
