--- a/MyTradeMTG/Views/User/TopUpList.cshtml
+++ b/MyTradeMTG/Views/User/TopUpList.cshtml
@@ -60,6 +60,7 @@
                                             <th>Transaction By</th>
                                             <th>Status</th>
                                             <th>TPS Percentage</th>
+                                            <th>Basis On</th>
                                             <th>Days</th>
                                             <th>Date</th>
                                             @*<th>TopUp Id</th>*@
@@ -85,6 +86,7 @@
                                                         <td>@Item.TransactionBy</td>
                                                         <td>@Item.Status</td>
                                                         <td>@Item.ROIPercentage %</td>
+                                                        <td>@Item.BasisOn</td>
                                                         <td><a class="btn btn-info btn-sm" href="/Wallet/ViewTPS?InvId=@Item.InvestmentId">@Item.PackageDays</a></td>
                                                         <td>@Item.TopUpDate</td>
                                                         @*<td>@Item.Topupid</td>*@
