--- a/MyTradeMTG/Views/Admin/PayoutRequestList.cshtml
+++ b/MyTradeMTG/Views/Admin/PayoutRequestList.cshtml
@@ -80,10 +80,10 @@
                                         <th>Narration</th>
                                         <th>Login Id</th>
                                         <th>Name</th>
-                                        <th>Net MTG Token/USDT</th>
+                                        <th>Net MTG /USDT</th>
                                         <th>Procesing Charges</th>
                                         <th>TDS</th>
-                                        <th>Gross MTG Token/USDT</th>
+                                        <th>Gross MTG /USDT</th>
                                         <th>Bank Details</th>
                                         <th class="showallbankdetails" style="display:none">Bank Name</th>
                                         <th class="showallbankdetails" style="display:none">Bank Branch</th>
