--- a/MyTradeMTG/Views/AdminReports/TopupReport.cshtml
+++ b/MyTradeMTG/Views/AdminReports/TopupReport.cshtml
@@ -81,13 +81,14 @@
                                         <th>Sr No.</th>
                                         @*<th>Login Id</th>*@
                                         <th>Name</th>
-                                        <th>Product Name</th>
-                                        <th>Topup MTG Token/USDT</th>
-                                        <th>Activation MTG Token</th>
+                                        <th>Topupid</th>
+                                        <th>Package Name</th>
+                                        <th>Topup MTG</th>
+                                        <th>Activation MTG </th>
                                         @*<th>BV</th>*@
                                         <th>Transaction By</th>
                                         <th>Status</th>
-                                        <th>TPS Percentage</th>
+                                        <th>Return Percentage</th>
                                         <th>Basis On</th>
                                         <th>Days</th>
                                         <th>Date</th>
@@ -114,6 +115,7 @@
                                                     <td>@i</td>
                                                     @*<td>@Item.LoginId</td>*@
                                                     <td>@Item.DisplayName</td>
+                                                    <td>@Item.Topupid</td>
                                                     <td>@Item.Package</td>
                                                     <td>@Item.PinAmount</td>
                                                     <td>@Item.ActivationMTGToken</td>
