--- a/MyTradeMTG/Views/Report/PayoutWalletLedger.cshtml
+++ b/MyTradeMTG/Views/Report/PayoutWalletLedger.cshtml
@@ -50,8 +50,8 @@
                                         <tr>
                                             <th>Sr No.</th>
                                             <th>Narration</th>
-                                            <th>Cr. MTG Token/USDT</th>
-                                            <th>Dr. MTG Token/USDT</th>
+                                            <th>Cr. MTG /USDT</th>
+                                            <th>Dr. MTG /USDT</th>
                                             <th>Transaction Date</th>
                                         </tr>
                                     </thead>
