--- a/MyTradeMTG/Views/Wallet/AddWallet.cshtml
+++ b/MyTradeMTG/Views/Wallet/AddWallet.cshtml
@@ -13,12 +13,12 @@
                 <div class="col-xl-12">
                     <div class="card">
                         <div class="card-header">
-                            <h4 class="card-title">MTG Token/USDT Request</h4>
+                            <h4 class="card-title">MTG /USDT Request</h4>
                         </div>
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <label style="color:red">MTG Token/USDT Balance: @ViewBag.WalletBalance &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <span style="color:#1e9f58">@TempData["msg"]</span></label>
+                                    <label style="color:red">MTG /USDT Balance: @ViewBag.WalletBalance &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <span style="color:#1e9f58">@TempData["msg"]</span></label>
                                 </div>
                             </div>
                             <div class="row">
@@ -31,7 +31,7 @@
                                 </div>
                                 <div class="col-xl-3 mb-3">
                                     <div class="example">
-                                        <p class="mb-1"> MTG Token/USDT<span style="color: red">*</span></p>
+                                        <p class="mb-1"> MTG /USDT<span style="color: red">*</span></p>
                                         @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @Placeholder = "MTG Token/USDT", @onkeypress = "return isNumberOrDecimal(event);", @onchange = "return ConvertMony()" })
                                     </div>
                                 </div>
