--- a/MyTradeMTG/Views/Wallet/WalletLedgerList.cshtml
+++ b/MyTradeMTG/Views/Wallet/WalletLedgerList.cshtml
@@ -40,9 +40,9 @@
                                     <thead>
                                         <tr>
                                             <th>S No.</th>
-                                            <th>Cr MTG Token/USDT</th>
-                                            <th>Dr MTG Token/USDT</th>
-                                            <th>MTG Token/USDT Balance</th>
+                                            <th>Cr MTG /USDT</th>
+                                            <th>Dr MTG /USDT</th>
+                                            <th>MTG /USDT Balance</th>
                                             <th>Narration</th>
                                             <th>Date</th>
                                         </tr>
