--- a/MyTradeMTG/Views/Wallet/WalletList.cshtml
+++ b/MyTradeMTG/Views/Wallet/WalletList.cshtml
@@ -20,7 +20,7 @@
                                         <tr>
                                             <th>Sr No.</th>
                                             @*<th>Request Code</th>*@
-                                            <th>MTG Token/USDT</th>
+                                            <th>MTG /USDT</th>
                                             <th>Payment Mode</th>
                                             <th>Requested Date</th>
                                             <th>Status</th>
