--- a/MyTradeMTG/Views/User/WalletTransfer.cshtml
+++ b/MyTradeMTG/Views/User/WalletTransfer.cshtml
@@ -23,7 +23,7 @@
                                     <div class="col-md-12">
                                         <p class="mb-1" style="color:white;">@TempData["wallettransfer"]</p>
                                         <br />
-                                        <label style="color:red">MTG Token/USDT Wallet Balance: @ViewBag.WalletBalance</label>
+                                        <label style="color:red">MTG /USDT Wallet Balance: @ViewBag.WalletBalance</label>
 
                                     </div>
                                 </div>
@@ -46,8 +46,8 @@
                                 <div class="col-xl-3 mb-3">
                                     <div class="example">
                                         <input type="hidden" id="WalletAmount" value="@ViewBag.WalletBalance" />
-                                        <p class="mb-1"> MTG Token/USDT<span style="color: red">*</span></p>
-                                        @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @Placeholder = "MTG Token/USDT", @onkeypress = "return isNumberOrDecimal(event);", @onchange = "return CheckAmount();" })
+                                        <p class="mb-1"> MTG /USDT<span style="color: red">*</span></p>
+                                        @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @Placeholder = "MTG /USDT", @onkeypress = "return isNumberOrDecimal(event);", @onchange = "return CheckAmount();" })
                                         @*<input id="SumTransferandAmount" name="SumTransferandAmount" readonly class="form-control" style="background:none;border:none;font-size:x-small" />*@
                                     </div>
                                 </div>
