--- a/MyTradeMTG/Views/Wallet/ViewTPS.cshtml
+++ b/MyTradeMTG/Views/Wallet/ViewTPS.cshtml
@@ -17,7 +17,7 @@
                                 @*<div class="col-xl-12 col-md-12 col-sm-12 col-12">*@
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <h4>View TPS</h4>
+                                        <h4>View TR2</h4>
                                         <span class="text-danger">
                                             @TempData["ROIIncome"]
                                         </span>
@@ -35,43 +35,43 @@
                                 <div class="col-sm-4">
                                     <h6>
                                         <b>
-                                            Total amount to be received : @ViewBag.TotalAmount
+                                            Total MTG to be received : @ViewBag.TotalAmount
                                         </b>
                                     </h6>
                                 </div>
                                 <div class="col-sm-3">
-                                    <h6><b>Total amount received : @ViewBag.ReceivedAmount</b></h6>
+                                    <h6><b>Total MTG received : @ViewBag.ReceivedAmount</b></h6>
                                 </div>
                                 <div class="col-sm-4">
-                                    <h6><b>Balance amount to be received : @ViewBag.BalanceAmount</b></h6>
+                                    <h6><b>Balance MTG to be received : @ViewBag.BalanceAmount</b></h6>
                                 </div>
                                 <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
                                     <thead>
                                         <tr>
                                             <th>S No.</th>
-                                            <th>TPS</th>
-                                            <th>TPS Date</th>
+                                            <th>TR2</th>
+                                            <th>TR2 Date</th>
                                             <th>Status</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         @if (Model != null)
-                                    {
-                                        if (Model.lstROI != null)
                                         {
-                                            int i = 1;
-                                            foreach (var Item in Model.lstROI)
+                                            if (Model.lstROI != null)
                                             {
-                                    <tr class="text-left">
-                                        <td>@i</td>
-                                        <td>@Item.ROI</td>
-                                        <td>@Item.Date</td>
-                                        <td>@Item.Status</td>
-                                    </tr>
-                                                i++;
+                                                int i = 1;
+                                                foreach (var Item in Model.lstROI)
+                                                {
+                                                    <tr class="text-left">
+                                                        <td>@i</td>
+                                                        <td>@Item.ROI</td>
+                                                        <td>@Item.Date</td>
+                                                        <td>@Item.Status</td>
+                                                    </tr>
+                                                    i++;
+                                                }
                                             }
                                         }
-                                    }
                                     </tbody>
                                 </table>
                             </div>
@@ -80,20 +80,20 @@
                 </div>
             </div>
         </div>
-        </div>
-        }
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
-        <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
+    </div>
+}
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
 
-        <script>
-            $('#FromDate').datepicker({
-                dateFormat: 'dd/mm/yy',
-            });
-            $('#ToDate').datepicker({
-                dateFormat: 'dd/mm/yy',
-            });
-        </script>
+<script>
+    $('#FromDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+    });
+    $('#ToDate').datepicker({
+        dateFormat: 'dd/mm/yy',
+    });
+</script>
 
 
 
